fixed problem with uneven padding in overflow

--- a/assets/styles/default.styl
+++ b/assets/styles/default.styl
@@ -11,6 +11,7 @@ body {
 }
 
 #app {
+  box-sizing: border-box;
   font-family: 'Avenir', Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
